# UrubuPix-Analytics

./: pyproject.toml
src/: main.py  models.py
src/tests/: test_main.py
