[tool.poetry]
name = "urubupix-analytics"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"
packages = [{include = "urubupix_analytics"}]

[tool.poetry.dependencies]
python = "3.11.3"
pytest = "^7.4.0"
sqlalchemy = "^2.0.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
